<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/examen_calificado_02_recuperacion"
        android:gravity="center"
        android:paddingHorizontal="30dp"
        android:textSize="24sp"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_margin="50dp"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:cardBackgroundColor="#4CAF50"
        app:cardCornerRadius="20dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintBottom_toTopOf="@+id/btnContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        android:visibility="invisible"
        >
        <ImageView
            android:id="@+id/imageView"
            android:src="@drawable/loli_bang"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/btnContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <Button
            android:id="@+id/btnMostrar"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mostrar"
            />
        <Button
            android:id="@+id/btnOcultar"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ocultar"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>